--- a/app/src/main/res/drawable/btn_continue.xml
+++ b/app/src/main/res/drawable/btn_continue.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-   <solid android:color="@color/black">
+   <solid android:color="@color/primary">
    </solid>
 
-    <corners android:radius="20dp"></corners>
-    <stroke android:color="@color/btn_gray" android:width="1dp"/>
+    <corners android:radius="20dp"/>
+    <stroke android:color="@color/gray" android:width="1dp"/>
 </shape>
