--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary"
-    tools:context=".ui.activity.MainActivity"
-    >
+    tools:context=".ui.activity.MainActivity">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNav"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:background="#40121212"
+        android:background="@color/black"
+        android:paddingVertical="5dp"
         android:visibility="gone"
         app:itemIconTint="#777777"
         app:itemTextColor="#777777"
@@ -46,7 +45,7 @@
         app:cardCornerRadius="12dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNav"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/bottomNav" >
+        app:layout_constraintStart_toStartOf="@+id/bottomNav">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -68,14 +67,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="24dp"
-                tools:text="TextView"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/imgTrack"
                 app:layout_constraintEnd_toStartOf="@+id/imgPause"
                 app:layout_constraintStart_toEndOf="@+id/imgTrack"
-                app:layout_constraintTop_toTopOf="@+id/imgTrack" />
+                app:layout_constraintTop_toTopOf="@+id/imgTrack"
+                tools:text="TextView" />
 
             <ImageView
                 android:id="@+id/imgPause"
