--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="txt_gray">#B3B3B3</color>
     <color name="btn_gray">#535353</color>
     <color name="music_blue">#0F1929</color>
+    <color name="dark_blue">#1A1C70</color>
 </resources>
