--- a/app/src/main/res/layout/fragment_add_playlist.xml
+++ b/app/src/main/res/layout/fragment_add_playlist.xml
@@ -65,6 +65,7 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="text"
+        android:textColor="@color/white"
         android:padding="8dp"
         android:background="@drawable/edit_text_search_playlist"
         android:hint="@string/add_playlist_txt_find"
