--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
         android:id="@+id/musicPlayer"
         android:layout_width="0dp"
         android:layout_height="60dp"
+        android:visibility="gone"
         android:layout_marginBottom="2dp"
         android:backgroundTint="@color/music_blue"
         app:cardCornerRadius="12dp"
