--- a/app/src/main/res/layout/fragment_new_playlist.xml
+++ b/app/src/main/res/layout/fragment_new_playlist.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/layout_color_new_playlist"
-    tools:context=".ui.fragments.others.NewPlaylistFragment">
+    tools:context=".ui.fragments.playlist.NewPlaylistFragment">
 
 
     <EditText
