--- a/app/src/main/res/layout/fragment_track_view.xml
+++ b/app/src/main/res/layout/fragment_track_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary"
-    tools:context=".ui.fragments.others.TrackViewFragment">
+    tools:context=".ui.fragments.track.TrackViewFragment">
 
 
     <androidx.constraintlayout.widget.Guideline
