--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Account Name"
+        tools:text="Account Name"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
