--- a/app/src/main/res/layout/fragment_user_library.xml
+++ b/app/src/main/res/layout/fragment_user_library.xml
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="TextView"
+        tools:text="TextView"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -74,8 +74,8 @@
         android:layout_marginTop="24dp"
         android:text="@string/library_txt_playlist"
         android:textColor="@color/white"
-        android:textStyle="bold"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imgProfile"
         app:layout_constraintTop_toBottomOf="@+id/view2" />
 
@@ -89,5 +89,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/txtPlaylist"
         app:layout_constraintTop_toBottomOf="@+id/txtPlaylist" />
+
+    <TextView
+        android:id="@+id/txtEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/txtName"
+        app:layout_constraintTop_toBottomOf="@+id/txtName"
+        tools:text="TextView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
