--- a/app/src/main/res/navigation/activity_main_nav.xml
+++ b/app/src/main/res/navigation/activity_main_nav.xml
@@ -71,6 +71,11 @@
         <action
             android:id="@+id/toLogin"
             app:destination="@id/login" />
+        <action
+            android:id="@+id/action_startFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/activity_main_nav"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/signUp1"
@@ -157,6 +162,11 @@
         <action
             android:id="@+id/action_settingsFragment_to_userLibraryFragment"
             app:destination="@id/userLibraryFragment" />
+        <action
+            android:id="@+id/action_settingsFragment_to_startFragment"
+            app:destination="@id/startFragment"
+            app:popUpTo="@id/activity_main_nav"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/userLibraryFragment"
