--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toTopOf="@+id/navBack" />
 
     <FrameLayout
-        android:id="@+id/frameLayout2"
+        android:id="@+id/viewUpdate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -86,7 +86,17 @@
             android:layout_gravity="center"
             android:background="@drawable/img_artist"
             android:clipToOutline="true"
-            android:src="@tools:sample/avatars" />
+            tools:src="@tools:sample/avatars" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="60dp"
+
+            android:src="@drawable/icon_edit" />
     </FrameLayout>
 
     <TextView
@@ -99,22 +109,33 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/viewUpdate" />
 
     <EditText
         android:id="@+id/edtName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:background="@drawable/edit_text_search_playlist"
         android:ems="10"
+        android:inputType="text"
+        android:padding="10dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:background="@drawable/edit_text_search_playlist"
-        android:padding="10dp"
-        android:inputType="text"
-        tools:text="Name"
         app:layout_constraintBottom_toBottomOf="@+id/textView12"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintStart_toEndOf="@+id/textView12"
-        app:layout_constraintTop_toTopOf="@+id/textView12" />
+        app:layout_constraintTop_toTopOf="@+id/textView12"
+        tools:text="Name" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
