--- a/app/src/main/res/layout/item_playlist_view.xml
+++ b/app/src/main/res/layout/item_playlist_view.xml
@@ -60,6 +60,8 @@
             android:layout_width="wrap_content"
             android:background="@drawable/radio_btn_playlist"
             android:layout_height="wrap_content"
+            android:textIsSelectable="true"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
