--- a/app/src/main/res/drawable/icon_arrow_back.xml
+++ b/app/src/main/res/drawable/icon_arrow_back.xml
@@ -1,11 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="10dp"
-    android:height="16dp"
-    android:viewportWidth="10"
-    android:viewportHeight="16">
-  <path
-      android:pathData="M9.173,15.6L0.273,8L9.173,0.4L9.727,1.047L1.586,8L9.727,14.952"
-      android:strokeAlpha="0.7"
-      android:fillColor="#ffffff"
-      android:fillAlpha="0.7"/>
+<vector android:autoMirrored="true" android:height="24dp"
+    android:tint="#FFFFFF" android:viewportHeight="24"
+    android:viewportWidth="24" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"/>
 </vector>
