--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,6 @@
     <color name="filled_gray">#282828</color>
     <color name="txt_gray">#B3B3B3</color>
     <color name="btn_gray">#535353</color>
-    <color name="music_blue">#0F1929</color>
+    <color name="music_blue">#03A9F4</color>
     <color name="dark_blue">#1A1C70</color>
 </resources>
