--- a/app/src/main/res/drawable/icon_music_play.xml
+++ b/app/src/main/res/drawable/icon_music_play.xml
@@ -1,9 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:pathData="M7,17.259V6.741a1,1 0,0 1,1.504 -0.864l9.015,5.26a1,1 0,0 1,0 1.727l-9.015,5.259A1,1 0,0 1,7 17.259Z"
-      android:fillColor="#fbfeff"/>
+<vector android:height="24dp" android:viewportHeight="7"
+    android:viewportWidth="6" android:width="20.571428dp" xmlns:android="http://schemas.android.com/apk/res/android">
+  <path android:fillColor="#ffffff" android:fillType="evenOdd" android:pathData="M5.495,2.573l-3.994,-2.43c-0.669,-0.408 -1.501,0.107 -1.501,0.926v4.862c0,0.82 0.832,1.333 1.5,0.927l3.995,-2.43c0.673,-0.41 0.673,-1.445 0,-1.855"/>
 </vector>
